<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="50dp"
    android:paddingVertical="10dp"
    tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintWidth_max="480dp">

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/signupTitle"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/signupDescription"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_round" />

        <ScrollView
            android:id="@+id/cvForm"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="24dp"
            android:minHeight="200dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/btnSignup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHeight_max="wrap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clFirstNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/message_text_input_background"
                    android:paddingHorizontal="12dp">

                    <ImageView
                        android:id="@+id/ivFirstName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/user" />

                    <com.planx.xchat.extensions.EditTextLoginSignup
                        android:id="@+id/etFirstName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/etFirstName_hint"
                        android:inputType="text"
                        android:paddingVertical="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivFirstName"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clLastNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/message_text_input_background"
                    android:paddingHorizontal="12dp">

                    <ImageView
                        android:id="@+id/ivLastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/user" />

                    <com.planx.xchat.extensions.EditTextLoginSignup
                        android:id="@+id/etLastName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/etLastName_hint"
                        android:inputType="text"
                        android:paddingVertical="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivLastName"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clUsernameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/message_text_input_background"
                    android:paddingHorizontal="12dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/user" />

                    <com.planx.xchat.extensions.EditTextLoginSignup
                        android:id="@+id/etUsername"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/etUsername_hint"
                        android:inputType="text"
                        android:paddingVertical="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/message_text_input_background"
                    android:paddingHorizontal="12dp">

                    <ImageView
                        android:id="@+id/ivPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.47"
                        app:srcCompat="@drawable/password" />

                    <com.planx.xchat.extensions.EditTextLoginSignup
                        android:id="@+id/etPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/etPassword_hint"
                        android:inputType="textPassword"
                        android:paddingVertical="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivPassword"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clPasswordConfirmLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/message_text_input_background"
                    android:paddingHorizontal="12dp">

                    <ImageView
                        android:id="@+id/ivPasswordConfirm"
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.47"
                        app:srcCompat="@drawable/password" />

                    <com.planx.xchat.extensions.EditTextLoginSignup
                        android:id="@+id/etPasswordConfirm"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/etPasswordConfirm_hint"
                        android:inputType="textPassword"
                        android:paddingVertical="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivPasswordConfirm"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:backgroundTint="@color/mint"
            android:text="@string/btnSignup"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"></Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintHeight_min="wrap"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="0dp"
                android:gravity="center_vertical"
                android:text="@string/askForLogin"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btnToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/textView"
                android:gravity="center_vertical"
                android:paddingHorizontal="3dp"
                android:paddingVertical="5dp"
                android:text="@string/toLogin"
                android:textColor="@color/darkMint"
                android:textSize="16sp" />
        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>